tests/derive/union.rs
use hecs::Bundle;

#[derive(Bundle)]
union Foo {
    u8: u8,
}

fn main() {}
